--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -66,18 +66,19 @@ h1, h2, h3, h4, h5 {
 /* Your code starts here! */
 /* navbar */
 .navigation {
-    width: 1200px;
+    width: 1100px;
     height: 50px;
     position: relative;
     margin-top: 30px;
     margin: 0 auto;
     padding-top: 20px;
+    background-color: #88B9DF;
 }
 
 a {
-    margin-left: 80px;
+    margin-left: 70px;
     text-decoration: none;
-    color: #C0C0C0;
+    color: /(#C0C0C0;
 }
 
 .logo {
@@ -97,13 +98,20 @@ a {
 header h1 {
     font-size: 80px;
     display: inline-block;
-    margin-left: 200px;
+    margin-left: 260px;
     position: relative;
     top: -100px;
 }
 
 /* indent the on demand text */
 
+.move-1 {
+    margin-left: -55px;
+}
+
+.move-2 {
+    margin-left: 60px;
+}
 
 header img {
     margin-top: 60px;
@@ -112,7 +120,7 @@ header img {
 
 button {
     position: relative;
-    right: 315px;
+    right: 240px;
     bottom: 60px;
     padding: 5px 40px;
     border: 1px solid black;
