--- a/great-idea-website/css/index2.css
+++ b/great-idea-website/css/index2.css
@@ -60,7 +60,9 @@ h2, h3, h4, h5 {
     margin-bottom: 15px;
 }
 
-
+body {
+    height: 100%;
+}
 /* make the navbar scrollable*/
 /* navbar */
 .navigation {
@@ -70,16 +72,14 @@ h2, h3, h4, h5 {
     padding-top: 20px;
     background-color: #88B9DF;
     border: 1px solid #000B1B;
-    position: fixed;
-    left: 400px;;
-    z-index: 1;
-   
 }
 
 a {
     margin-left: 70px;
     text-decoration: none;
     color: /*#C0C0C0;*/ black;
+    transition: all 0.5s;
+     cursor: pointer;
 }
 
 .logo {
@@ -88,103 +88,46 @@ a {
     position: absolute;
 }
 
-/* header */
-.header-one {
-    width: 1100px;
-    border-bottom: 1px solid black;
+header {
+    width: 720px;
     margin: 0 auto;
-    padding-bottom: 30px;
-    padding-top: 70px;
+    padding-top: 100px;
 }
 
-header h1 {
-    font-size: 90px;
-    display: inline-block;
-    margin-left: 230px;
-    position: relative;
-    top: -100px;
+h1 {
+    margin-left: 234px;
+    margin-bottom: 20px;
+    font-size: 60px;
+    border-bottom: 1px solid  #6ea5d2;
+    width: 210px;
 }
 
-/* indent the on demand text */
-/* first span element*/
-.move-1 {
-    margin-left: -45px;
-}
-/* second span element*/
-.move-2 {
-    margin-left: 90px;
-}
-
-header img {
-    margin-top: 60px;
-    margin-left: -60px;
-}
-
-button {
-    position: relative;
-    right: 300px;
-    bottom: 60px;
-    padding: 5px 40px;
-    border: 1px solid black;
-    background-color: white;
-    font-size: 15px;
-}
-
-
-/* section 1*/
-.section-one {
-    width: 1100px;
-    margin: 0 auto;
-    position: relative;
-    top: 50px;
-   
-}
-
-.div-p-h3 {
-    width: 541px;
-    display: inline-block;
-    margin-left: 0px;
-    padding-left: 10px;
+header p {
+    width: 700px;
     
 }
 
-/* section 2 img*/
 .middle-img {
-    padding-top: 90px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 1100px;
-    margin-bottom: 50px;
-}
-
-
-/* section 3*/
-.section-three {
-    border-bottom: 1px solid black;
     margin: 0 auto;
-    width: 1100px;
-    padding-bottom: 40px;
+    position: relative;
+    top: 20px;
+    right: 10px;
+    display: block;
+    
 }
 
-.div-h3-p {
-    width: 350px;
-    display: inline-block; 
-    margin-left: 12px;
-}
 
 address {
-    width: 200px ;
-    margin-left: 410px;
-    margin-top: 40px;
+    width: 200px;
+    margin: 0 auto;
+    position: relative; 
+    top: 100px;
 }
 
 
-.copyright {
-    margin-top: 50px;
-    margin-left: 860px;
-    margin-bottom: 80px;
-}
+
+
+
 
 
 
